--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,14 @@ dependencies {
     implementation 'com.google.guava:guava:18.0'
     implementation 'ch.qos.logback:logback-classic:1.1.2'
     testImplementation 'junit:junit:4.11'
+    compile group: 'com.google.guava', name: 'guava', version: '18.0'
 }
 
 group = 'org.nhnnext'
 version = '1.0'
 sourceCompatibility = '1.8'
+
+
 
 publishing {
     publications {
